5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1760_1580.log
== TEST (2019-05-27 19:23:51) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:23:59) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:24:37) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:25:09) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:42:38) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(notas)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) =< 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
File "XXXX", line 13
    elif(nota(quant) =< 6):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:43:38) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(notas)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:44:12) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:47:05) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:48:49) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant = size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
File "XXXX", line 8
    while(quant = size(nota)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:48:58) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant > size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(size(nota))

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:50:07) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant > size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(falta

		
		
		
-- ERROR:
File "XXXX", line 21
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:50:12) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant > size(nota)):
	if(nota(quant) == -1):
		falta = falta + 1
	elif(nota(quant) >= 6):
		aproves = aproves + 1
	elif(nota(quant) <= 6):
		rep = rep + 1
	cont = cont + 1
print(falta)

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:51:35) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	cont = cont + 1
print(falta)

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:53:17) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	cont = cont + 1
print(falta)

		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:54:49) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:03) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)
print(round(2, (sum(nota) / size(nota))))
print(max(nota))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:09:07) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)
print(round(2, (sum(nota) / size(nota))))
print(max(nota))
		
		
		
-- EXECUTION TIME:
0.379621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1580/main.py", line 19, in <module>
    print(round(2, (sum(nota) / size(nota))))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:14) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)
print(round(2, (sum(nota) / size(nota))))
print(max(nota))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:45) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)

print(max(nota))
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:15:23) 
-- CODE:
from numpy import*
nota = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
quant = 0
falta = 0
aproves = 0
rep = 0
while(quant < size(nota)):
	if(nota[quant] == -1):
		falta = falta + 1
	elif(nota[quant] >= 6):
		aproves = aproves + 1
	elif(nota[quant] <= 6):
		rep = rep + 1
	quant = quant + 1
print(falta)
print(aproves)
print(rep)

print(max(nota))
		
		
		
-- EXECUTION TIME:
1.12858
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
9
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
notas dos alunos: nomes dos alunos: 6
0
5
5.6
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
notas dos alunos: nomes dos alunos: 0
7
4
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:17:12) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])
-- EXECUTION TIME:
1.1352
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:17:14) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])
-- EXECUTION TIME:
0.430279
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1760/1580/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:18:36) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])
-- EXECUTION TIME:
1.00868
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:18:57) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])
-- EXECUTION TIME:
1.0995
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
